# onnxruntime-inference-examples

./: .gitignore
c_cxx/api/: CMakeLists.txt  README.md  main.cpp  run.sh
c_sharp/image_classification/model/: test_model.py
mobile/examples/question_answering/model/: augment_base_model.py  augment_model.py  test_model.py
mobile/examples/text_classification/: .gitignore  README.md
mobile/examples/text_classification/app/: App.tsx  app.json  package-lock.json  package.json  webpack.config.js
mobile/examples/text_classification/app/android/app/: BUCK  build.gradle
mobile/examples/text_classification/app/android/app/src/main/: AndroidManifest.xml
mobile/examples/text_classification/app/android/app/src/main/java/ai/onnxruntime/senti/: MainActivity.java  MainApplication.java
mobile/examples/text_classification/app/android/app/src/main/java/ai/onnxruntime/senti/newarchitecture/: MainApplicationReactNativeHost.java
mobile/examples/text_classification/app/android/app/src/main/jni/: MainApplicationTurboModuleManagerDelegate.h  MainComponentsRegistry.h
mobile/examples/text_classification/model/: augment_base_model.py  augment_model.py  convert_to_ort.sh  export.py  test_model.py
python/custom_op/: README.md  base_pytorch.py  custom_op.py  export.py  model.py  show.py
python/data_proc/: export_test.py  op_test.py
python/nlp/distilbert/: distilbert.ipynb
python/power/: README.md  create_session.py  exp-impact-test-env.yml  ort.csv  run_session.py  score.py  session_resources.py
python/power/old/: power.log.csv  pytorch.csv  pytorch.log.csv
(+2 files in other folders)
